--- a/templates/base.html
+++ b/templates/base.html
@@ -35,9 +35,18 @@
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <link rel="stylesheet" href="{% static 'css/cores.css' %}">
 
+  {% comment %} ORIGINAL:
+  <script src="{% static 'js/pfe.js' %}"></script>
   <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
-  <script src="{% static 'popper-1.16.1/popper.min.js' %}" defer></script>
-  <script src="{% static 'bootstrap-4.3.1-dist/js/bootstrap.min.js' %}" defer></script>
+  <script src="{% static 'popper-1.16.1/popper.min.js' %}"></script>
+  <script src="{% static 'js/tooltip.js' %}"></script>
+  <script src="{% static 'bootstrap-4.3.1-dist/js/bootstrap.min.js' %}"></script>
+  <script src="{% static 'js/pega_erro.js' %}"></script> {% endcomment %}
+
+  {% comment %} MUDAR ESSA ORDEM PODE NÃO SER UMA BOA IDEIA {% endcomment %}
+  <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
+  <script src="{% static 'popper-1.16.1/popper.min.js' %}"></script>
+  <script src="{% static 'bootstrap-4.3.1-dist/js/bootstrap.min.js' %}"></script>
   <script src="{% static 'js/pfe.js' %}" defer></script>
   <script src="{% static 'js/tooltip.js' %}" defer></script>
   <script src="{% static 'js/pega_erro.js' %}" defer></script>
