--- a/templates/500.html
+++ b/templates/500.html
@@ -1,195 +1,179 @@
-<!DOCTYPE html>
-{% comment %}
-  Desenvolvido para o Projeto Final de Engenharia
-  Autor: Luciano Pereira Soares <lpsoares@insper.edu.br>
-  Data: 18 de Junho de 2023
-{% endcomment %}
+{% extends "error_base.html" %}
 
-{% comment %} Fonte: https://codepen.io/gaiaian {% endcomment %}
+{% block title %}Server Error 500{% endblock %}
 
-<html>
+{% block extra_styles %}
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Server Error 500</title>
-    <style>
-        /**/
-        :root {
-          --main-color: #eaeaea;
-          --stroke-color: black;
-          
-        }
-        /**/
-        body {background: var(--main-color);}
-        h1 {
-          margin: 100px auto 0 auto;
-          color: var(--stroke-color);
-          font-family: 'Encode Sans Semi Condensed', Verdana, sans-serif;
-          font-size: 10rem; line-height: 10rem;
-          font-weight: 200;
-          text-align: center;
-        }
-        h2 {
-          margin: 20px auto 30px auto;
-          font-family: 'Encode Sans Semi Condensed', Verdana, sans-serif;
-          font-size: 1.5rem;
-          font-weight: 200;
-          text-align: center;
-        }
-        h1, h2 {
-          -webkit-transition: opacity 0.5s linear, margin-top 0.5s linear; /* Safari */
-          transition: opacity 0.5s linear, margin-top 0.5s linear;
-        }
-        .loading h1, .loading h2 {
-          margin-top: 0px;
-          opacity: 0;  
-        }
-        .gears {
-          position: relative;
-          margin: 0 auto;
-          width: auto; height: 0;
-        }
-        .gear {
-          position: relative;
-          z-index: 0;
-          width: 120px; height: 120px;
-          margin: 0 auto;
-          border-radius: 50%;
-          background: var(--stroke-color);
-        }
-        .gear:before{
-          position: absolute; left: 5px; top: 5px; right: 5px; bottom: 5px;
-          z-index: 2;
-          content: "";
-          border-radius: 50%;
-          background: var(--main-color);
-        }
-        .gear:after {
-          position: absolute; left: 25px; top: 25px;
-          z-index: 3;
-          content: "";
-          width: 70px; height: 70px;
-          border-radius: 50%;
-          border: 5px solid var(--stroke-color);
-          box-sizing: border-box;
-          background: var(--main-color);
-        }
-        .gear.one {
-          left: -130px;
-        }
-        .gear.two {
-          top: -75px;
-        }
-        .gear.three {
-          top: -235px;
-          left: 130px;
-        }
-        .gear .bar {
-          position: absolute; left: -15px; top: 50%;
-          z-index: 0;
-          width: 150px; height: 30px;
-          margin-top: -15px;
-          border-radius: 5px;
-          background: var(--stroke-color);
-        }
-        .gear .bar:before {
-          position: absolute; left: 5px; top: 5px; right: 5px; bottom: 5px;
-          z-index: 1;
-          content: "";
-          border-radius: 2px;
-          background: var(--main-color);
-        }
-        .gear .bar:nth-child(2) {
-          transform: rotate(60deg);
-          -webkit-transform: rotate(60deg);
-        }
-        .gear .bar:nth-child(3) {
-          transform: rotate(120deg);
-          -webkit-transform: rotate(120deg);
-        }
-        @-webkit-keyframes clockwise {
-          0% { -webkit-transform: rotate(0deg);}
-          100% { -webkit-transform: rotate(360deg);}
-        }
-        @-webkit-keyframes anticlockwise {
-          0% { -webkit-transform: rotate(360deg);}
-          100% { -webkit-transform: rotate(0deg);}
-        }
-        @-webkit-keyframes clockwiseError {
-          0% { -webkit-transform: rotate(0deg);}
-          20% { -webkit-transform: rotate(30deg);}
-          40% { -webkit-transform: rotate(25deg);}
-          60% { -webkit-transform: rotate(30deg);}
-          100% { -webkit-transform: rotate(0deg);}
-        }
-        @-webkit-keyframes anticlockwiseErrorStop {
-          0% { -webkit-transform: rotate(0deg);}
-          20% { -webkit-transform: rotate(-30deg);}
-          60% { -webkit-transform: rotate(-30deg);}
-          100% { -webkit-transform: rotate(0deg);}
-        }
-        @-webkit-keyframes anticlockwiseError {
-          0% { -webkit-transform: rotate(0deg);}
-          20% { -webkit-transform: rotate(-30deg);}
-          40% { -webkit-transform: rotate(-25deg);}
-          60% { -webkit-transform: rotate(-30deg);}
-          100% { -webkit-transform: rotate(0deg);}
-        }
-        .gear.one {
-          -webkit-animation: anticlockwiseErrorStop 2s linear infinite;
-        }
-        .gear.two {
-          -webkit-animation: anticlockwiseError 2s linear infinite;
-        }
-        .gear.three {
-          -webkit-animation: clockwiseError 2s linear infinite;
-        }
-        .loading .gear.one, .loading .gear.three {
-          -webkit-animation: clockwise 3s linear infinite;
-        }
-        .loading .gear.two {
-          -webkit-animation: anticlockwise 3s linear infinite;
-        }
-    </style>
-  </head>
+      h1 { color: var(--warning); }
 
-  <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Semi+Condensed:100,200,300,400" rel="stylesheet">
-  <body class="loading">
-    <h1>500</h1>
-    <h2>
-      Erro inesperado no servidor<br>
-      Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>
-    </h2>
-    <div class="gears">
-      <div class="gear one">
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
+      /* Container das engrenagens */
+      .gears-container {
+        position: relative;
+        width: 396px;
+        height: 180px;
+        margin: 2rem auto 1.5rem auto;
+      }
+
+      .gear {
+        position: absolute;
+        border-radius: 50%;
+        background: var(--primary);
+        box-shadow: 0 0 30px rgba(84,254,85,0.6);
+        width: 120px;
+        height: 120px;
+      }
+
+      .gear::before {
+        position: absolute;
+        left: 5px;
+        top: 5px;
+        right: 5px;
+        bottom: 5px;
+        z-index: 2;
+        content: "";
+        border-radius: 50%;
+        background: var(--bg);
+      }
+
+      .gear::after {
+        position: absolute;
+        left: 25px;
+        top: 25px;
+        z-index: 3;
+        content: "";
+        width: 70px;
+        height: 70px;
+        border-radius: 50%;
+        border: 5px solid var(--primary);
+        box-sizing: border-box;
+        background: var(--bg);
+        box-shadow: inset 0 0 20px rgba(84,254,85,0.3);
+      }
+
+      .gear.one {
+        left: 0;
+        top: 30px;
+        animation: gear-error-stop 2.5s ease-in-out infinite;
+      }
+
+      .gear.two {
+        left: 138px;
+        top: 0;
+        animation: gear-error-wobble 2.5s ease-in-out infinite;
+      }
+
+      .gear.three {
+        left: 276px;
+        top: 30px;
+        animation: gear-error-reverse 2.5s ease-in-out infinite;
+      }
+
+      .gear .bar {
+        position: absolute;
+        left: -15px;
+        top: 50%;
+        z-index: 0;
+        width: 150px;
+        height: 30px;
+        margin-top: -15px;
+        border-radius: 5px;
+        background: var(--primary);
+        box-shadow: 0 0 15px rgba(84,254,85,0.5);
+      }
+
+      .gear .bar::before {
+        position: absolute;
+        left: 5px;
+        top: 5px;
+        right: 5px;
+        bottom: 5px;
+        z-index: 1;
+        content: "";
+        border-radius: 2px;
+        background: var(--bg);
+      }
+
+      .gear .bar:nth-child(2) {
+        transform: rotate(60deg);
+      }
+
+      .gear .bar:nth-child(3) {
+        transform: rotate(120deg);
+      }
+
+      /* Animações de erro nas engrenagens */
+      @keyframes gear-error-stop {
+        0% { transform: rotate(0deg); }
+        20% { transform: rotate(-35deg); }
+        60% { transform: rotate(-30deg); }
+        100% { transform: rotate(0deg); }
+      }
+
+      @keyframes gear-error-wobble {
+        0% { transform: rotate(0deg); }
+        20% { transform: rotate(-35deg); }
+        40% { transform: rotate(-25deg); }
+        60% { transform: rotate(-30deg); }
+        100% { transform: rotate(0deg); }
+      }
+
+      @keyframes gear-error-reverse {
+        0% { transform: rotate(0deg); }
+        20% { transform: rotate(35deg); }
+        40% { transform: rotate(25deg); }
+        60% { transform: rotate(30deg); }
+        100% { transform: rotate(0deg); }
+      }
+
+      /* Texto de alerta */
+      .alert-text {
+        font-size: 0.75rem;
+        color: var(--warning);
+        text-shadow: 0 0 8px rgba(255,170,0,0.7);
+        margin-top: 1rem;
+        letter-spacing: 0.15rem;
+      }
+{% endblock %}
+
+{% block responsive_styles %}
+        .gears-container { 
+          width: 280px; 
+          height: 150px;
+          transform: scale(0.85);
+        }
+{% endblock %}
+
+{% block content %}
+      <h1>500</h1>
+      <div class="subtitle">Erro interno do servidor<span class="blink">_</span></div>
+
+      <div class="gears-container">
+        <div class="gear one">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
+        <div class="gear two">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
+        <div class="gear three">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
       </div>
-      <div class="gear two">
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
+
+      <div class="alert-text">⚙ SISTEMA COM FALHA ⚙</div>
+
+      <div class="subtitle" style="font-size:0.9rem">
+        Ocorreu um erro inesperado no processamento.<br>
+        O problema foi notificada automaticamente.
       </div>
-      <div class="gear three">
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
+
+      <div class="contato">
+        para reportar o problema, contactar:
+        <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>
       </div>
-    </div>
-    
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="js/main.js"></script>
-
-    <script>
-      $(function() {
-          setTimeout(function(){
-            $('body').removeClass('loading');
-          }, 1000);
-        });
-      </script>
-
-  </body>
-
-</html>
+{% endblock %}
