--- a/templates/calendario_bancas.html
+++ b/templates/calendario_bancas.html
@@ -62,7 +62,7 @@
 <script>
   
   function atualiza(event) {
-    url = "{% url 'ajax_atualiza_banca' %}";
+    url = "{% url 'atualiza_banca' %}";
     data = {
       "id": event.id,
       "start": event.start.toLocaleString("pt-BR", { year: "numeric", month: "2-digit", day: "2-digit", hour: "2-digit", minute: "2-digit", hour12: false  }),
@@ -156,7 +156,7 @@
           {
             events:  function(info, successCallback, failureCallback) {
               $.ajax({
-                  url: "{% url 'ajax_bancas' %}",
+                  url: "{% url 'retorna_bancas' %}",
                   type: "POST",
                   dataType: "json",
                   data: {
